--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.2",
     "react-player": "^2.9.0",
     "react-router-dom": "6",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.5",
     "web-vitals": "^2.1.0"
   },
